--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,8 +84,7 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-
+    //coil
+    implementation("io.coil-kt:coil:1.1.1")
 
 }
