--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "BASE_URL", '"https://api.github.com/search/"'
+            buildConfigField "String", "BASE_URL_TEST", '"https://jsonplaceholder.typicode.com/"'
         }
 
         debug {
@@ -36,6 +37,7 @@ android {
             debuggable true
 
             buildConfigField "String", "BASE_URL", '"https://api.github.com/search/"'
+            buildConfigField "String", "BASE_URL_TEST", '"https://jsonplaceholder.typicode.com/"'
         }
     }
     compileOptions {
